@@ -1139,7 +1139,7 @@ parse_version_string (const char *s, int *major, int *minor, int *micro)
  * condition is not satisfied.  If a %NULL is passed to this function,
  * no check is done, but the version string is simply returned.
  *
- * See %LIBTASN1_VERSION for a suitable @req_version string.
+ * See %ASN1_VERSION for a suitable @req_version string.
  *
  * Return value: Version string of run-time library, or %NULL if the
  *   run-time library does not meet the required version number.
@@ -1147,7 +1147,7 @@ parse_version_string (const char *s, int *major, int *minor, int *micro)
 const char *
 asn1_check_version (const char *req_version)
 {
-  const char *ver = LIBTASN1_VERSION;
+  const char *ver = ASN1_VERSION;
   int my_major, my_minor, my_micro;
   int rq_major, rq_minor, rq_micro;
   const char *my_plvl, *rq_plvl;
