@@ -3,6 +3,8 @@ Version 1.6 (unreleased)
   The new names are ASN1_MAX_NAME_SIZE and ASN1_MAX_ERROR_DESCRIPTION_SIZE.
 - Fixed namespace violation for libtasn1_perror and libtasn1_strerror.
   The new names are asn1_perror and asn1_strerror.
+- Fix namespace violation for LIBASN1_VERSION.
+  The new name is ASN1_VERSION.
 - Optimized tree generation.
 - Decoder can now decode BER encoded octet strings.
 - doc: Change license on the manual to GFDLv1.3+.
@@ -13,11 +15,13 @@ Version 1.6 (unreleased)
   use standard AC_CHECK_FUNCS autoconf tests or pkg-config instead.
 - API and ABI changes since last version:
   asn1_get_length_ber: New function.
+  struct node_asn_struct: Removed, was never documented nor meant for export.
+  ASN1_VERSION: New symbol, replaces LIBTASN1_VERSION.
   asn1_strerror: New function, replaces libtasn1_strerror.
   asn1_perror: New function, replaces libtasn1_perror.
   libtasn1_strerror: Marked as deprecated.
   libtasn1_perror: Marked as deprecated.
-  struct node_asn_struct: Removed, was never documented nor meant for export.
+  LIBTASN1_VERSION: Deprecated.
 
 Version 1.5 (released 2008-07-29)
 - Update gnulib files.
